--- a/www.hzshuangmei.com/templets/shuangmei/_meta.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_meta.htm
@@ -1,6 +1,7 @@
 <!-- {dede:tagname runphp='yes'}@me="Make ".GetDateTimeMk(time());{/dede:tagname} -->
 <!-- {dede:tagname runphp='yes'}@me="Make ".GetMkTime(time());{/dede:tagname} -->
 <meta charset="UTF-8">
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <meta name="renderer" content="webkit"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 <meta name=applicable-device content="pc">
