--- a/m.hzshuangmei.com/templets/shuangmei/_meta.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_meta.htm
@@ -1,6 +1,7 @@
 <!-- {dede:tagname runphp='yes'}@me="Make ".GetDateTimeMk(time());{/dede:tagname} -->
 <meta charset="utf-8">
 <meta name="applicable-device" content="mobile">
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <!-- 避免IE使用兼容模式 -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <!-- 启用360浏览器的极速模式(webkit) -->
