--- a/www.hzshuangmei.com/templets/shuangmei/list_case.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_case.htm
@@ -17,7 +17,7 @@
         <h2 class="h2_tit" id="ca_01"><img src="{dede:global.cfg_imgpath/}/pc/case_title.png" alt="红妆双美整形日记"/></h2>
         <div class="case_content">
             <div id="case_tab">
-                <ul class="btn">
+                <ul class="btn" id="casenav">
                     <li><a href="/cases/eye/#ca_01">眼部 ></a></li>
                     <li><a href="/cases/nose/#ca_01">鼻部 ></a></li>
                     <li><a href="/cases/face/#ca_01">面部 ></a></li>
