修改文章来源
修改文章来源

--- a/www.hzshuangmei.com/templets/shuangmei/article_news.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/article_news.htm
@@ -18,7 +18,7 @@
         <div class="article_case_content clearFix">
             <div class="center">
                   <h1>{dede:field.title/}</h1>
-                <p class="tit"><span>来源 : 红妆医学美容</span> <span>时间：{dede:field.pubdate function="MyDate('Y-m-d H:i',@me)" /} </span> <span>点击量：{dede:field.click /}  </span><a href="javascript:void(0)" class="j-consult" rel="nofollow"></a></p>
+                <p class="tit"><span>来源 : 红妆双美</span> <span>时间：{dede:field.pubdate function="MyDate('Y-m-d H:i',@me)" /} </span> <span>点击量：{dede:field.click /}  </span><a href="javascript:void(0)" class="j-consult" rel="nofollow"></a></p>
                 <div class="ar_ar  ar_ar1"> {dede:field.body /} </div>
                 <div class="page clearFix">
                     <p><span>上一篇：</span>{dede:prenext get='next'/}</p>
