列表页测试
列表页测试

--- a/www.hzshuangmei.com/templets/shuangmei/_footer.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_footer.htm
@@ -20,8 +20,8 @@
             </div>
             <ul class="mar_t">
                 <li><a class="j-site-consult" href="javascript:void(0)" target="_blank">>胸部整形</a></li>
-                <li><a href="/eye/qjsyp">>眼部整形</a></li>
-                <li><a href="/nose/dlslb">>鼻部整形</a></li>
+                <li><a href="">>眼部整形</a></li>
+                <li><a href="">>鼻部整形</a></li>
                 <li><a href="">>唇部整形</a></li>
                 <li><a href="">>塑形体雕</a></li>
                 <li><a href="">>自体脂肪填充</a></li>
