案例列表修改
案例列表修改

--- a/www.hzshuangmei.com/templets/shuangmei/list_case.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_case.htm
@@ -18,6 +18,7 @@
         <div class="case_content">
             <div id="case_tab">
                 <ul class="btn" id="case_nav">
+                    <li class="nav_list"><a href="/cases" class="nav_link">全部案例 ></a></li>
                     <li class="nav_list"><a href="/cases/eye/#ca_01" class="nav_link">眼部 ></a></li>
                     <li class="nav_list"><a href="/cases/nose/#ca_01" class="nav_link">鼻部 ></a></li>
                     <li class="nav_list"><a href="/cases/face/#ca_01" class="nav_link">面部 ></a></li>
