项目列表页修改
项目列表页修改

--- a/www.hzshuangmei.com/templets/shuangmei/list_project.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_project.htm
@@ -24,8 +24,9 @@
     </div>
     <div class="project_content">
         <div id="ptab2">
-            <ul>
-                <li class="pli2"><img src="{dede:global.cfg_imgpath/}/pc/project_hi1.jpg" alt="眼部项目"/></li>
+            <ul id="project_nav">
+                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi0.jpg" alt="全部项目"/></li>
+                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi1.jpg" alt="眼部项目"/></li>
                 <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi2.jpg" alt="鼻部项目"/></li>
                 <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi3.jpg" alt="面部五官项目"/></li>
                 <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi4.jpg" alt="纹绣项目"/></li>
@@ -37,199 +38,19 @@
                 <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi10.jpg" alt="botox"/></li>
                 <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi11.jpg" alt="衡力"/></li>
             </ul>
-            <div class="gengduo j-consult">更多</div>
+            <!--<div class="gengduo j-consult">更多</div>-->
         </div>
 
         <ul id="ptabCon2" class="clearFix">
-            <li class="pdiv2">
-                {dede:arclist typeid=15 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
-                    <div>
-                        <p>
-                            <span>[field:title/]</span><br/>
-                            <span>[field:shorttitle/]</span>
-                        </p>
-                        <div class="click">
-                            <i></i>
-                            <span>点击</span>
-                        </div>
-                        <div class="line1"></div>
-                    </div>
-                </a>
-                {/dede:arclist}
-            </li>
             <li>
-                {dede:arclist typeid=14 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
-                    <div>
-                        <p>
-                            <span>[field:title/]</span><br/>
-                            <span>[field:shorttitle/]</span>
-                        </p>
-                        <div class="click">
-                            <i></i>
-                            <span>点击</span>
-                        </div>
-                        <div class="line1"></div>
-                    </div>
-                </a>
-                {/dede:arclist}
-            </li>
-            <li>
-                {dede:arclist typeid=16 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
-                    <div>
-                        <p>
-                            <span>[field:title/]</span><br/>
-                            <span>red makeup refined grain lip</span>
-                        </p>
-                        <div class="click">
-                            <i></i>
-                            <span>点击</span>
-                        </div>
-                        <div class="line1"></div>
-                    </div>
-                </a>
-                {/dede:arclist}
-            </li>
-            <li>
-                {dede:arclist typeid=20 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
-                    <div>
-                        <p>
-                            <span>[field:title/]</span><br/>
-                            <span>[field:shorttitle/]</span>
-                        </p>
-                        <div class="click">
-                            <i></i>
-                            <span>点击</span>
-                        </div>
-                        <div class="line1"></div>
-                    </div>
-                </a>
-                {/dede:arclist}
-            </li>
-            <li>
-                {dede:arclist typeid=21 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
-                    <div>
-                        <p>
-                            <span>[field:title/]</span><br/>
-                            <span>[field:shorttitle/]</span>
-                        </p>
-                        <div class="click">
-                            <i></i>
-                            <span>点击</span>
-                        </div>
-                        <div class="line1"></div>
-                    </div>
-                </a>
-                {/dede:arclist}
-            </li>
-            <li>
-                {dede:arclist typeid=17 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
-                    <div>
-                        <p>
-                            <span>[field:title/]</span><br/>
-                            <span>[field:shorttitle/]</span>
-                        </p>
-                        <div class="click">
-                            <i></i>
-                            <span>点击</span>
-                        </div>
-                        <div class="line1"></div>
-                    </div>
-                </a>
-                {/dede:arclist}
-            </li>
-            <li>
-                {dede:arclist typeid=18 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
-                    <div>
-                        <p>
-                            <span>[field:title/]</span><br/>
-                            <span>[field:shorttitle/]</span>
-                        </p>
-                        <div class="click">
-                            <i></i>
-                            <span>点击</span>
-                        </div>
-                        <div class="line1"></div>
-                    </div>
-                </a>
-                {/dede:arclist}
-            </li>
-            <li>
-                {dede:arclist typeid=19 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
-                    <div>
-                        <p>
-                            <span>[field:title/]</span><br/>
-                            <span>[field:shorttitle/]</span>
-                        </p>
-                        <div class="click">
-                            <i></i>
-                            <span>点击</span>
-                        </div>
-                        <div class="line1"></div>
-                    </div>
-                </a>
-                {/dede:arclist}
-            </li>
-            <li>
-                {dede:arclist typeid=22 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
-                    <div>
-                        <p>
-                            <span>[field:title/]</span><br/>
-                            <span>[field:shorttitle/]</span>
-                        </p>
-                        <div class="click">
-                            <i></i>
-                            <span>点击</span>
-                        </div>
-                        <div class="line1"></div>
-                    </div>
-                </a>
-                {/dede:arclist}
-            </li>
-            <li>
-                {dede:arclist typeid=23 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
-                    <div>
-                        <p>
-                            <span>[field:title/]</span><br/>
-                            <span>[field:shorttitle/]</span>
-                        </p>
-                        <div class="click">
-                            <i></i>
-                            <span>点击</span>
-                        </div>
-                        <div class="line1"></div>
-                    </div>
-                </a>
-                {/dede:arclist}
+                {dede:list pagesize="12" titlelen="120" orderby="weight" orderway="desc"}
 
-            </li>
-            <li>
-                {dede:arclist typeid=34 titlelen="120" orderby='id'}
-                <a href="[field:arcurl/]">
-                    <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
+                <a href="[field:arcurl/]" title="[field:title/]">
+                    <img src="[field:picname function='replaceurl(@me)/]" alt="[field:title/]"/>
                     <div>
                         <p>
                             <span>[field:title/]</span><br/>
-                            <span>[field:shorttitle/]</span>
+                            <span>[field:shorttitle function='@me=@me==""?"RED MAKEUP":"@me"'/]</span>
                         </p>
                         <div class="click">
                             <i></i>
@@ -238,10 +59,13 @@
                         <div class="line1"></div>
                     </div>
                 </a>
-                {/dede:arclist}
+                {/dede:list}
             </li>
         </ul>
     </div>
+    <ul class="pagination clearFix">
+        {dede:pagelist listitem='pre,next,pageno,index,end' listsize='3'/}
+    </ul>
     <!--<a href="" class="ask">更多项目<i></i></a>-->
 </div>
 {dede:include filename="_footer.htm"/}
