项目列表页修改2
项目列表页修改2

--- a/www.hzshuangmei.com/templets/shuangmei/list_project.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_project.htm
@@ -25,18 +25,18 @@
     <div class="project_content">
         <div id="ptab2">
             <ul id="project_nav">
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi0.jpg" alt="全部项目"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi1.jpg" alt="眼部项目"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi2.jpg" alt="鼻部项目"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi3.jpg" alt="面部五官项目"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi4.jpg" alt="纹绣项目"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi5.jpg" alt="皮肤美容"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi6.jpg" alt="胸部整形"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi7.jpg" alt="私密整形"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi8.jpg" alt="形体雕塑"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi9.jpg" alt="玻尿酸"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi10.jpg" alt="botox"/></li>
-                <li><img src="{dede:global.cfg_imgpath/}/pc/project_hi11.jpg" alt="衡力"/></li>
+                <li><a href="/projects" class="nav_link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi0.jpg" alt="全部项目"/></a></li>
+                <li><a href="/projects/eye/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi1.jpg" alt="眼部项目"/></a></li>
+                <li><a href="/projects/nose/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi2.jpg" alt="鼻部项目"/></a></li>
+                <li> <a href="/projects/face/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi3.jpg" alt="面部五官项目"/></a></li>
+                <li><a href="/projects/tattoo/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi4.jpg" alt="纹绣项目"/></a></li>
+                <li><a href="/projects/skin/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi5.jpg" alt="皮肤美容"/></a></li>
+                <li><a href="/projects/chest/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi6.jpg" alt="胸部整形"/></a></li>
+                <li><a href="/projects/private/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi7.jpg" alt="私密整形"/></a></li>
+                <li><a href="/projects/body/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi8.jpg" alt="形体雕塑"/></a></li>
+                <li> <a href="/projects/ha/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi9.jpg" alt="玻尿酸"/></a></li>
+                <li><a href="/projects/botox/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi10.jpg" alt="botox"/></a></li>
+                <li><a href="/projects/hengli/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi11.jpg" alt="衡力"/></a></li>
             </ul>
             <!--<div class="gengduo j-consult">更多</div>-->
         </div>
