--- a/www.hzshuangmei.com/templets/shuangmei/list_project.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_project.htm
@@ -23,7 +23,7 @@
         {dede:myad name='projectpic_pc'/}
     </div>
     <div class="project_content">
-        <div id="ptab2">
+        <div id="ptab2" class="btn">
             <ul id="project_nav">
                 <li class="nav_list"><a href="/projects" class="nav_link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi0.jpg" alt="全部项目"/></a></li>
                 <li class="nav_list"><a href="/projects/eye/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi1.jpg" alt="眼部项目"/></a></li>
@@ -41,7 +41,7 @@
             <!--<div class="gengduo j-consult">更多</div>-->
         </div>
 
-        <ul id="ptabCon2" class="clearFix">
+        <ul id="ptabCon2" class="project_con clearFix">
             <li>
                 {dede:list pagesize="12" titlelen="120" orderby="weight" orderway="desc"}
 
