--- a/www.hzshuangmei.com/templets/shuangmei/list_project.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_project.htm
@@ -23,8 +23,8 @@
         {dede:myad name='projectpic_pc'/}
     </div>
     <div class="project_content">
-        <div id="ptab2" class="btn">
-            <ul id="project_nav">
+        <div id="ptab2">
+            <ul id="project_nav" class="btn clearFix">
                 <li class="nav_list"><a href="/projects" class="nav_link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi0.jpg" alt="全部项目"/></a></li>
                 <li class="nav_list"><a href="/projects/eye/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi1.jpg" alt="眼部项目"/></a></li>
                 <li class="nav_list"><a href="/projects/nose/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi2.jpg" alt="鼻部项目"/></a></li>
